<resources>

    <string name="app_name">Wilks</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_wilks">Calculadora Wilks</string>
    <string name="txtPeso">Digite seu peso:</string>
    <string name="txtSupino">Digite peso do supino:</string>
    <string name="lblSexo">Sexo:</string>
    <string name="btnCalcWilks">Calcula Wilks</string>
    <string name="lblWilksPoinst">Pontos Wilks:</string>
    <string name="txtWilksResult">txtWilksResult</string>
    <string name="Coeff">Coeff:</string>

</resources>