<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/sexos"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/editText4" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clubes"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/txtPeso" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPesoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPeso"
        android:layout_alignBottom="@+id/txtPeso"
        android:layout_toRightOf="@+id/txtPeso"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtPeso"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/txtSupino" />

    <EditText
        android:id="@+id/txtPesoSupino"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/txtPesoValue"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/lblSexo" />

    <Button
        android:id="@+id/btn_clcWilks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnCalcWilks" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/lblWilksPoinst" />

    <EditText
        android:id="@+id/txtWilksResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal" />

</RelativeLayout>
